--- a/calculadora.html
+++ b/calculadora.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>
-        Calculadora
-    </title>
+    <meta charset="UTF-8">
+    <title>Calculadora</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-
+    <div id="main">
+        <div id="calculadora">
+            <header>0</header>
+            <main>
+                <button class="long">C</button>
+                <button class="num">DEL</button>
+                <button class="op inactive">/</button>
+                <button class="num">1</button>
+                <button class="num">2</button>
+                <button class="num">3</button>
+                <button class="op">x</button>
+                <button class="num">4</button>
+                <button class="num">5</button>
+                <button class="num">6</button>
+                <button class="op active ">+</button>
+                <button class="num inactive">7</button>
+                <button class="num">8</button>
+                <button class="num">9</button>
+                <button class="op active active-plus">-</button>
+                <button class="num">,</button>
+                <button class="num">0</button>
+                <button class="long">=</button>
+            </main>
+        </div>
+    </div>
 </body>
 </html>
