--- a/calculadora.html
+++ b/calculadora.html
@@ -11,24 +11,24 @@
         <div id="calculadora">
             <header>0</header>
             <main>
-                <button class="long" id="clearButton">C</button>
-                <button id="delButton">DEL</button>
-                <button class="op inactive">/</button>
+                <button class="long inactive" disabled name="disable" id="clearButton">C</button>
+                <button class="inactive" disabled name="disable" id="delButton">DEL</button>
+                <button class="op inactive" disabled name="disable" id="op/">/</button>
                 <button class="num">1</button>
                 <button class="num">2</button>
                 <button class="num">3</button>
-                <button class="op">x</button>
+                <button class="op inactive" disabled name="disable" id="opx">x</button>
                 <button class="num">4</button>
                 <button class="num">5</button>
                 <button class="num">6</button>
-                <button class="op active ">+</button>
-                <button class="num inactive">7</button>
+                <button class="op inactive" disabled name="disable" id="op+">+</button>
+                <button class="num">7</button>
                 <button class="num">8</button>
                 <button class="num">9</button>
-                <button class="op active active-plus">-</button>
+                <button class="op" id="op-">-</button>
                 <button class="num" id="comma">,</button>
                 <button class="num">0</button>
-                <button class="long">=</button>
+                <button class="long inactive" disabled name="disable" id="equalButton">=</button>
             </main>
         </div>
     </div>
